Bug 50913 - mod_proxy_fcgi does not honor ProxyErrorOverride directive
Summary: mod_proxy_fcgi does not honor ProxyErrorOverride directive
Status: RESOLVED FIXED
Alias: None
Product: Apache httpd-2
Classification: Unclassified
Component: Other Modules (show other bugs)
Version: 2.5-HEAD
Hardware: PC Linux
: P2 normal (vote)
Target Milestone: ---
Assignee: Apache HTTPD Bugs Mailing List
URL:
Keywords: PatchAvailable
Depends on:
Blocks:
 
Reported: 2011-03-10 17:38 UTC by Mark Montague
Modified: 2011-04-01 15:24 UTC (History)
1 user (show)



Attachments
Add support for ProxyErrorOverride to mod_proxy_fcgi (7.18 KB, patch)
2011-03-10 17:40 UTC, Mark Montague
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Montague 2011-03-10 17:38:43 UTC
mod_proxy_fcgi always uses the error pages of the backend server, even when "ProxyErrorOverride on" is specified.

Configuration:

    <Location /test/>
        ProxyPass fcgi://127.0.0.1:9000/www/php-ssl/
        ProxyErrorOverride on
    </Location>

If the end user requests

http://server-name/test/this-does-not-exist

they should get an error page from httpd (either the default one, or the one configured in an "ErrorDocument 404" directive).  Instead, the user gets the error page generated by the backend server.


Additional information:

# /usr/sbin/httpd -V
Server version: Apache/2.3.12-dev (Unix)
Server built:   Mar 10 2011 16:36:16
Server's Module Magic Number: 20110203:2
Server loaded:  APR 1.4.2, APR-UTIL 1.3.10
Compiled using: APR 1.4.2, APR-UTIL 1.3.10
Architecture:   64-bit
Server MPM:     prefork
  threaded:     no
    forked:     yes (variable process count)
Server compiled with....
 -D APR_HAS_SENDFILE
 -D APR_HAS_MMAP
 -D APR_HAVE_IPV6 (IPv4-mapped addresses enabled)
 -D APR_USE_SYSVSEM_SERIALIZE
 -D APR_USE_PTHREAD_SERIALIZE
 -D SINGLE_LISTEN_UNSERIALIZED_ACCEPT
 -D APR_HAS_OTHER_CHILD
 -D AP_HAVE_RELIABLE_PIPED_LOGS
 -D DYNAMIC_MODULE_LIMIT=256
 -D HTTPD_ROOT="/etc/httpd"
 -D SUEXEC_BIN="/usr/sbin/suexec"
 -D DEFAULT_ERRORLOG="logs/error_log"
 -D AP_TYPES_CONFIG_FILE="conf/mime.types"
 -D SERVER_CONFIG_FILE="conf/httpd.conf"

php-fpm from PHP 5.3.6-dev
Fedora 14 64-bit (fully patched)
gcc 4.5.1

httpd custom built from svn trunk with:

./configure --prefix=/etc/httpd --exec-prefix=/usr --bindir=/usr/bin
--sbindir=/usr/sbin --mandir=/usr/share/man --libdir=/usr/lib64
--sysconfdir=/etc/httpd/conf --includedir=/usr/include/httpd
--libexecdir=/usr/lib64/httpd/modules --datadir=/var/www
--with-installbuilddir=/usr/lib64/httpd/build --with-mpm=prefork
--with-apr=/usr --with-apr-util=/usr --enable-suexec --with-suexec
--with-suexec-caller=apache --with-suexec-docroot=/var/www
--with-suexec-logfile=/var/log/httpd/suexec.log
--with-suexec-bin=/usr/sbin/suexec --with-suexec-uidmin=500
--with-suexec-gidmin=100 --enable-pie --with-pcre --enable-mods-shared=all
--enable-ssl --with-ssl --enable-distcache --enable-proxy --enable-cache
--enable-disk-cache --enable-socache-dc --enable-ldap --enable-authnz-ldap
--enable-cgid --enable-authn-anon --enable-authn-alias --enable-session
--enable-session-cookie --enable-session-dbd --enable-lua --enable-dav-lock
--disable-imagemap
Comment 1 Mark Montague 2011-03-10 17:40:34 UTC
Created attachment 26762 [details]
Add support for ProxyErrorOverride to mod_proxy_fcgi
Comment 2 Jim Jagielski 2011-04-01 15:24:58 UTC
Will be in 2.3.12