  *) mod_proxy_fcgi: Add support for 'ProxyErrorOverride on' PR 50913.      [Mark Montague <mark catseye.org>, Jim Jagielski]

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1087863 13f79535-47bb-0310-9956-ffa450edef68